<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".presentation.fragments.AdminPanelFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5sp"
        android:text="@string/admin_panel"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_game1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/game_1_clocks_settings"
        android:textAlignment="textStart"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_game2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/game_2_code_generation_settings"
        android:textAlignment="textStart"

        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_game3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/game_3_decoding_settings"
        android:textAlignment="textStart"
        android:textSize="15sp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:text="@string/start_game"
        android:textSize="16sp" />
</LinearLayout>